fix: overflow

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -2,7 +2,7 @@ body {
   position: relative;
   font-family: $poppins;
   width: 100vw;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 #root {
   position: relative;
